<resources>
    <string name="app_name">Calendar</string>
    <string name="create_event">Add Event</string>
    <string name="next_month">Next Month</string>
    <string name="previous_month">Previous Month</string>

<!--    Days of the week for month view-->
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>

<!--    for event stuff-->
    <string name="cancel">Cancel</string>
    <string name="confirm">Save</string>
    <string name="previous_day">Previous Day</string>
    <string name="add_event">Add Event</string>

<!--    day overview-->
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="select_date">Select date</string>
    <string name="select_start_time">Select start time</string>
    <string name="select_end_time">Select end time</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="course">Course</string>
    <string name="save_changes">Save changes</string>

    <string name="details">Details</string>
    <string name="edit">Edit</string>
    <string name="celebrated_in">Celebrated in: </string>
    <string name="temperature">Temperature: </string>
    <string name="condition">Condition: </string>
    <string name="last_update">Last update: </string>
    <string name="loading_weather">Loading weather...</string>
</resources>